# udemyProject

./: githelp.txt  pyproject.toml
btre/: settings.py
